--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,9 +17,11 @@
                 <label>Password:</label>
                 <input type="text" name="password">
             </p>
+            <a href="/bot">
             <p>
                 <input type="submit" value="Login">
             </p>
+            </a>
 </form>
 </body>
 </html>
