--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <body>
         <h1>Login</h1>
 
-        <form method="post" action="">
+        <form method="post" action="/login">
             <p>
                 <label>Username:</label>
                 <input type="text" name="username">
